# codecrypt

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Makefile.am  README  README.md  autogen.sh  build-debian-package.sh  configure.ac
debian/: changelog  codecrypt.manpages  control  copyright  gbp.conf  rules  watch
debian/source/: options
doc/nums/: README.md  hexsqrt.c
include/: codecrypt.h
lib/: bvector.cpp  cfs_qd.cpp  decoding.cpp  decoding.h  fwht.cpp  fwht.h  gf2m.cpp  ios.cpp  lib.c  log.c  log.h  math.c  math.h  matrix.cpp  mce.c  mce.cpp  mce_oc.cpp  mce_qd.cpp  nd.cpp  permutation.cpp  polynomial.cpp  prng.h  qd_utils.cpp  qd_utils.h  sencode.cpp  sencode.h  serialization.cpp  tools.c  tools.h
man/: ccr.1
src/: actions.cpp  actions.h  algo_suite.cpp  algo_suite.h  algorithm.h  algos_enc.cpp  algos_enc.h  algos_sig.cpp  algos_sig.h  arcfour.h  base64.cpp  base64.h  bvector.cpp  bvector.h  chacha.cpp  chacha.h  codecrypt.h  cube_hash.h  cubehash_impl.h  decoding.cpp  decoding.h  encryption.h  envelope.cpp  envelope.h  factoryof.h  fft.cpp  fft.h  fmtseq.cpp  fmtseq.h  generator.cpp  generator.h  gf2m.cpp  gf2m.h  hash.cpp  hash.h  hashfile.cpp  hashfile.h  iohelpers.cpp  iohelpers.h  ios.cpp  (+54 more)
